<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/select_queue" />

    <Spinner
        android:id="@+id/queue_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/format_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/select_format" />

    <Spinner
        android:id="@+id/format_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/position" />

    <EditText
        android:id="@+id/PostionView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/leave_blank"
        android:maxLength="3"
        android:maxLines="1"
        android:inputType="number" />

    <Button
        android:id="@+id/add_title_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_title_queue" />

</LinearLayout>