<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/home_btn_discqueue"
            style="@style/HomeButton"
            android:drawableTop="@drawable/ic_tab_disc"
            android:onClick="onDiscQueueClick"
            android:text="@string/btn_discqueue" />

        <Button
            android:id="@+id/home_btn_instantqueue"
            style="@style/HomeButton"
            android:drawableTop="@drawable/ic_tab_instant"
            android:onClick="onInstantQueueClick"
            android:text="@string/btn_instantqueue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/home_btn_suggestions"
            style="@style/HomeButton"
            android:drawableTop="@drawable/ic_tab_heart"
            android:onClick="onSuggestionsClick"
            android:text="@string/btn_suggest" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/home_btn_athome"
            style="@style/HomeButton"
            android:drawableTop="@drawable/ic_menu_home"
            android:onClick="onAtHomeClick"
            android:text="@string/btn_athome" />

        <Button
            android:id="@+id/home_btn_history"
            style="@style/HomeButton"
            android:drawableTop="@drawable/ic_menu_agenda"
            android:onClick="onHistoryClick"
            android:text="@string/btn_history" />
    </LinearLayout>

</LinearLayout>