<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:onClick="onHomeClick"
            android:src="@drawable/ic_title_home" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/title_bar_separator" />

        <TextView style="@style/TitleBarText" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/title_bar_separator" />

        <ImageButton
            android:id="@+id/btn_title_refresh"
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_refresh"
            android:onClick="onRefreshClick"
            android:src="@drawable/ic_title_refresh" />

        <ProgressBar
            android:id="@+id/title_refresh_progress"
            style="@style/TitleBarProgressIndicator"
            android:visibility="gone" />

        <ImageView
            style="@style/TitleBarSeparator"
            android:contentDescription="@string/title_bar_separator" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:onClick="onSearchClick"
            android:src="@drawable/ic_title_search" />
    </LinearLayout>

    <include layout="@layout/activity_browse_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="-15dip"
        android:gravity="bottom"
        android:orientation="vertical" >

        <include
            android:id="@+id/IncludeTitle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            layout="@layout/branding" />
    </LinearLayout>

</LinearLayout>